worked on node-swagger-postgresql project
